<resources>
    <string name="app_name">GR25 Flexicu</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="loginbt">Login</string>
    <string name="udlejHvem">Hvem Skal Udlejes?</string>
    <string name="underHvilkeVilkår">Under Hvilke Vilkår</string>


    <string name="navIndlej">Indlej</string>
    <string name="navUdlej">Udlej</string>
    <string name="navMineIndlejninger">Mine Indlejninger</string>
    <string name="navMineUdlejninger">Mine Udlejninger</string>
    <string name="lejeperiodeStart">Lejeperiode Start</string>
    <string name="lejeperiodeSlut">Lejeperiode Slut</string>
    <string name="lejer">Lejer</string>
    <string name="erhverv">Erhverv Start</string>
    <string name="lokation">Lokation</string>
    <string name="flexicu_logo">Flexicu Logo</string>
    <string name="TitleTextCreateEmployee">Hvad hedder personen som skal udlejes?</string>
    <string name="spring_over"> <u> Spring over </u> </string>
    <string name="navn">Navn</string>
    <string name="title_activity_create_employee_distance">CreateEmployeeDistance</string>
    <string name="title_activity_rent_out_tabbed">RentOutTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_rent_out">TabbedRentOut</string>
    <string name="tab_text_1">Udlej</string>
    <string name="tab_text_2">Mine udlejninger</string>
    <string name="title_activity_tabbbsss">tabbbsss</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_rent_in">tabbedRentIn</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>
</resources>
