<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FlexGreen"
    tools:context=".Login">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/LoginLayout"
        android:layout_width="294dp"
        android:layout_height="346dp"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:fadingEdge="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/PasswordView"
            android:layout_width="210dp"
            android:layout_height="42dp"
            android:layout_marginBottom="56dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/LoginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/loginbt"
            app:layout_constraintBottom_toTopOf="@+id/LoginLaterView"
            app:layout_constraintStart_toStartOf="@+id/LoginLaterView" />

        <TextView
            android:id="@+id/LoginLaterView"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginBottom="36dp"
            android:text="Login senere"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/UsernameView"
            android:layout_width="210dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>